Delete all the TODO mark

--- a/Image_Classifier_Project.ipynb
+++ b/Image_Classifier_Project.ipynb
@@ -135,7 +135,7 @@
    "outputs": [],
    "source": [
     "from torch.utils.data import DataLoader\n",
-    "# TODO: Define your transforms for the training, validation, and testing sets\n",
+    "# Define your transforms for the training, validation, and testing sets\n",
     "train_transform = transforms.Compose([transforms.RandomRotation(30),\n",
     "                                       transforms.RandomResizedCrop(224),\n",
     "                                       transforms.RandomHorizontalFlip(),\n",
@@ -155,13 +155,13 @@
     "                                      transforms.Normalize([0.485, 0.456, 0.406],\n",
     "                                                           [0.229, 0.224, 0.225])])\n",
     "\n",
-    "# TODO: Load the datasets with ImageFolder\n",
+    "# Load the datasets with ImageFolder\n",
     "image_datasets = dict()\n",
     "image_datasets['train'] = datasets.ImageFolder(train_dir,transform=train_transform)\n",
     "image_datasets['validation'] = datasets.ImageFolder(valid_dir,transform=validation_transform)\n",
     "image_datasets['test'] = datasets.ImageFolder(test_dir,transform=test_transform)\n",
     "\n",
-    "# TODO: Using the image datasets and the trainforms, define the dataloaders\n",
+    "# Using the image datasets and the trainforms, define the dataloaders\n",
     "batch_size=16\n",
     "dataloaders = dict()\n",
     "dataloaders['train'] = DataLoader(image_datasets['train'],batch_size=batch_size,shuffle=True)\n",
@@ -418,7 +418,7 @@
     }
    ],
    "source": [
-    "# TODO: Build and train your network\n",
+    "# Build and train your network\n",
     "model=models.resnet50(pretrained=True)\n",
     "for p in model.parameters():\n",
     "    p.requires_grad = False\n",
@@ -977,7 +977,7 @@
     }
    ],
    "source": [
-    "# TODO: Do validation on the test set\n",
+    "# Do validation on the test set\n",
     "accuracy = 0\n",
     "model.eval()\n",
     "\n",
@@ -1015,7 +1015,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO: Save the checkpoint \n",
+    "# Save the checkpoint \n",
     "model.class_to_idx = image_datasets['train'].class_to_idx\n",
     "checkpoint = {'state_dict': model.state_dict(),\n",
     "              'optimizer': optimizer.state_dict(),\n",
@@ -1040,7 +1040,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO: Write a function that loads a checkpoint and rebuilds the model\n",
+    "# Write a function that loads a checkpoint and rebuilds the model\n",
     "checkpoint=torch.load('checkpoint.pth')\n",
     "model.load_state_dict(checkpoint['state_dict'])\n",
     "optimizer.load_state_dict(checkpoint['optimizer'])\n",
@@ -1110,7 +1110,7 @@
     "        returns an Numpy array\n",
     "    '''\n",
     "    \n",
-    "    # TODO: Process a PIL image for use in a PyTorch model\n",
+    "    # Process a PIL image for use in a PyTorch model\n",
     "    image_transforms = transforms.Compose([transforms.Resize(255),\n",
     "                                      transforms.CenterCrop(224),\n",
     "                                      transforms.ToTensor(),\n",
@@ -1186,7 +1186,7 @@
     "    ''' Predict the class (or classes) of an image using a trained deep learning model.\n",
     "    '''\n",
     "    model.eval()\n",
-    "    # TODO: Implement the code to predict the class from an image file\n",
+    "    # Implement the code to predict the class from an image file\n",
     "    input=process_image(image_path)\n",
     "    input=input.unsqueeze_(0)\n",
     "    input=input.float()\n",
@@ -1232,7 +1232,7 @@
     }
    ],
    "source": [
-    "# TODO: Display an image along with the top 5 classes\n",
+    "# Display an image along with the top 5 classes\n",
     "plt.figure(figsize = (6,10))\n",
     "\n",
     "image_path = 'flowers/test/1/image_06752.jpg'\n",
