--- a/Image_Classifier_Project.ipynb
+++ b/Image_Classifier_Project.ipynb
@@ -1022,7 +1022,7 @@
     "              'class_to_idx': model.class_to_idx,\n",
     "              'epochs': epochs\n",
     "             }\n",
-    "torch.save(checkpoint, 'checkpoint.pth')"
+    "torch.save(checkpoint, 'checkpoints/checkpoint.pth')"
    ]
   },
   {
@@ -1041,7 +1041,7 @@
    "outputs": [],
    "source": [
     "# Write a function that loads a checkpoint and rebuilds the model\n",
-    "checkpoint=torch.load('checkpoint.pth')\n",
+    "checkpoint=torch.load('checkpoints/checkpoint.pth')\n",
     "model.load_state_dict(checkpoint['state_dict'])\n",
     "optimizer.load_state_dict(checkpoint['optimizer'])\n",
     "model.class_to_idx=checkpoint['class_to_idx']\n",
