Move checkpoint into checkpoints folder

--- a/Combined_Image_Classifier.ipynb
+++ b/Combined_Image_Classifier.ipynb
@@ -973,7 +973,7 @@
     "              'class_to_idx': model.class_to_idx,\n",
     "              'epochs': epochs\n",
     "             }\n",
-    "torch.save(checkpoint, 'checkpoint1.pth')"
+    "torch.save(checkpoint, 'checkpoints/checkpoint1.pth')"
    ]
   },
   {
@@ -1009,7 +1009,7 @@
    ],
    "source": [
     "# Loads a checkpoint and rebuilds the model\n",
-    "checkpoint=torch.load('checkpoint1.pth')\n",
+    "checkpoint=torch.load('checkpoints/checkpoint1.pth')\n",
     "model.load_state_dict(checkpoint['state_dict'])\n",
     "optimizer.load_state_dict(checkpoint['optimizer'])\n",
     "model.class_to_idx=checkpoint['class_to_idx']\n",
@@ -1258,7 +1258,7 @@
    "outputs": [],
    "source": [
     "# TODO remove .pth files or move it to a temporary `~/opt` directory in this Workspace\n",
-    "#!rm checkpoint.pth"
+    "#!rm checkpoints/checkpoint.pth"
    ]
   },
   {
